test/fail/text-low-surrogate.mo
let _ = "\u{d800}";
